--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
     <title>Document</title>
 </head>
 
-<h1>My Class Work</h1>
+<h1>Student Bio</h1>
 
-<p>Push to Github</p>
+<h2>Mory O. Doumbia</h2>
 
-<h2>New Update</h2>
+<img src="/Users/morydoumbia/Bio/IMG_0496.jpg" alt="">
 
-<p>Another push to Github</p>
+<p>I love to learn</p>
+
+<div>
+    <section>
+        <h2>Contact Info</h2>
+        <ul>
+            <li><strong>Email:</strong></li> 
+            <li><strong>Github:</strong></li> 
+            <li><strong>Portfolio:</strong></li>       
+        </ul>
+    </section>
+
+</div>
 
 
 <body>
