--- a/index.html
+++ b/index.html
@@ -3,31 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Student Bio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<h1>Student Bio</h1>
-
-<h2>Mory O. Doumbia</h2>
-
-<img src="/Users/morydoumbia/Bio/IMG_0496.jpg" alt="">
-
-<p>I love to learn</p>
-
-<div>
-    <section>
-        <h2>Contact Info</h2>
-        <ul>
-            <li><strong>Email:</strong></li> 
-            <li><strong>Github:</strong></li> 
-            <li><strong>Portfolio:</strong></li>       
-        </ul>
-    </section>
-
-</div>
-
-
 <body>
+
+    <div class= 'masterhead'>
+
+    </div>
+
+    <h1>Student Bio</h1>
+
+    <h2>Mory O. Doumbia</h2>
+
+    <img src="/Users/morydoumbia/Bio/img/IMG_0496.jpg" 
+    width="200px"
+    height="200px"
+    >
     
+    <p>I am inspiring software engineer. I love travel and seek wisdom</p>
+
+    <h2>Contact Info</h2>
+    <ul>
+        <li><strong>Email</strong> <a href="#">mory.d192@gmail.com</a></li>
+        <li><strong>GitHub</strong> <a href="#">Mansa-MD</a></li>
+        <li><strong>Portfolio</strong> <a href="#">Coming Soon!</a></li>
+
+    </ul>
+
+
+
 </body>
 </html>
